--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -1124,3 +1124,9 @@
 "nt_you_were_mentioned_g" = "Сізді осы топ атап өтті:";
 "backdrop_warn" = "Суреттер жоғарыдағы орналасудағыдай реттеледі. Олардың биіктігі автоматты түрде ұлғайып, экран биіктігінің 100% алады, ортасында бұлыңғырлық болады. Негізгі OpenVK интерфейсінің фонын ауыстыру немесе дыбысты қосу мүмкін емес.";
 "gifts_left_zero" = "Нөл сыйлық қалды";
+
+"bday_reminder" = "Еске салғыш";
+"bday_today" = "Бүгін";
+"bday_tomorrow" = "Ертең";
+"bday_reminder_text" = "$1 $2 туған күні.";
+"bday_and" = " мен ";
