--- a/locales/udm.strings
+++ b/locales/udm.strings
@@ -809,3 +809,9 @@
 /* User alerts */
 
 "user_alert_scam" = "мошенничество тросгес герӟаськемын та to вылэ ӝожтӥсько. Пожалуйста, сак луыны, уката ик дорын тонэ уксё куре ке.";
+
+"bday_reminder" = "Тодэ вайытон";
+"bday_today" = "Туннэ";
+"bday_tomorrow" = "Ӵуказе";
+"bday_reminder_text" = "$1 вордӥськем нуналзы $2.";
+"bday_and" = " но ";
