--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -774,3 +774,9 @@
 
 "closed_group_post" = "Это высказыванiе изъ закрытого общѣства";
 "deleted_target_comment" = "Этотъ отзыв принадлѣжит к удалѣнному высказыванiю";
+
+"bday_reminder" = "Напоминание";
+"bday_today" = "Сегодня";
+"bday_tomorrow" = "Завтра";
+"bday_reminder_text" = "$1 день рождения $2.";
+"bday_and" = " и ";
