feat(wall): wall search

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -290,6 +290,8 @@
 "show_more" = "Show more";
 "has_repost" = "Has repost";
 
+"wall_search" = "Search";
+
 "likers_list" = "Likers list";
 "liked_verb" = "Liked by";
 
