--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -268,6 +268,7 @@
 "others_posts" = "Чужие записи";
 "show_more" = "Показать больше";
 "has_repost" = "Содержит репост";
+"wall_search" = "Поиск";
 
 "likers_list" = "Список лайкнувших";
 "liked_verb" = "Понравилось";
