locales-kk: clarify "upload" term translation, fix Tour translation, fix edit page translation

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -58,7 +58,7 @@
 "registration_date" = "Тіркелген күні";
 "hometown" = "Туған жері";
 "this_is_you" = "бұл Сіз";
-"edit_page" = "Бетті өңдеу";
+"edit_page" = "Парақшаны өңдеу";
 "edit_group" = "Топты өңдеу";
 "change_status" = "Күйді өзгерту";
 "name" = "Аты";
@@ -126,15 +126,15 @@
 "personal_website" = "Жеке сайт";
 "city" = "Қала";
 "address" = "Мекен-жай";
-"personal_information" = "Мүдделер";
-"interests" = "Қызығушылықтар";
+"personal_information" = "Жеке ақпарат";
+"interests" = "Мүдделер";
 "additional" = "Қосымша";
 "additional_fields_description" = "Мұнда өзіңіз жайлы қосыша ақпарат қоса аласыз, мысалы, әлжелілердегі парақшаңызға сілтемелер немесе басқа да қызығушылықтарыңыз. $1 жиекке дейін қоса аласыз.";
 "additional_field_name" = "Атауы";
 "additional_field_text" = "Мәтіні";
-"additional_field_place" = "Бөлім";
+"additional_field_place" = "Қай бөлімге қосу";
 "additional_field_place_contacts" = "Байланыс";
-"additional_field_place_interests" = "Қызығушылықтар";
+"additional_field_place_interests" = "Мүдделер";
 
 "favorite_music" = "Сүйікті музыка";
 "favorite_films" = "Сүйікті фимльмдер";
@@ -331,7 +331,7 @@
 "subscriptions" = "Жазылымдар";
 "join_community" = "Топқа кіру";
 "leave_community" = "Топтан шығу";
-"check_community" = "Топты қарау";
+"check_community" = "Топ бетін ашу";
 "min_6_community" = "Топтың аты тым болмаса 6 әріптен көп болу керек";
 "participants" = "Қатысушылар";
 "groups" = "Топтар";
@@ -343,8 +343,8 @@
 "group_type_closed" = "Бұл жабық топ, оған кіру үшін өтінім жазуыңыз қажет.";
 "creator" = "Құрған";
 "administrators" = "Әкімшілер";
-"add_to_left_menu" = "Сол жақтағы мәзірге қосу";
-"remove_from_left_menu" = "Сол жақтағы мәзірден алу";
+"add_to_left_menu" = "Сол жақ мәзірге қосу";
+"remove_from_left_menu" = "Сол жақ мәзірден алу";
 "all_followers" = "Барлық жазылмандар";
 "only_administrators" = "Тек әкімшілер";
 "website" = "Сайт";
@@ -457,9 +457,9 @@
 "creating_album" = "Альбом жасалуда";
 "delete_photo" = "Суретті жою";
 "sure_deleting_photo" = "Мына суретті шынымен альбомнан өшіргіңіз келе ме?";
-"upload_photo" = "Сурет жүктеу";
+"upload_photo" = "Сурет жүктеп салу";
 "photo" = "Сурет";
-"upload_button" = "Жүктеу";
+"upload_button" = "Жүктеп салу";
 "open_original" = "Түпнұсқасын ашу";
 "avatar_album" = "Парақшамдағы суреттер";
 "wall_album" = "Қабырғамдағы суреттер";
@@ -476,7 +476,7 @@
 "uploading_new_image" = "Жаңа суретті жүктеп салу";
 "friends_avatar" = "Шын суретіңізді жүктеп қойсаңыз достарыңыз сізді оңай таниды.";
 "groups_avatar" = "Жақсы сурет бірлестігіңізді танымал етеді.";
-"formats_avatar" = "JPG, GIF немесе PNG форматтағы суреттерді жүктеуге болады.";
+"formats_avatar" = "JPG, GIF немесе PNG форматтағы суреттерді жүктеп салуға болады.";
 "troubles_avatar" = "Суреттің жүктелуімен мәселе болса, көлемін кiшiрейтіп, жүктеп көрiңiз.";
 "webcam_avatar" = "Компьютеріңізге веб-камера қосылып тұрса, лезде <a id='_takeSelfie'>сурет түсіріп көріңіз »</a>";
 "publish_on_wall" = "Қабырғада жазба жариялау";
@@ -498,20 +498,20 @@
 "upd_g" = "топ суретін өзгертті";
 
 "add_photos" = "Суреттерді қосу";
-"upload_picts" = "Суреттерді жүктеу";
-"end_uploading" = "Жүктеуді аяқтау";
+"upload_picts" = "Суреттерді жүктеп салу";
+"end_uploading" = "Жүктеп салуды аяқтау";
 "photos_successfully_uploaded" = "Суреттер сәтті жүктелді";
 "click_to_go_to_album" = "Альбомға өту үшін осында басыңыз.";
-"too_many_pictures" = "10 суреттен артық жүктеуге болмайды";
+"too_many_pictures" = "10 суреттен артық жүктеп салуға болмайды";
 "too_many_attachments" = "Тіркемелер тым көп.";
 
 "drag_files_here" = "Файлдарды осында сүйреңіз";
 "only_images_accepted" = "\"$1\" файлы — сурет немесе бейне емес.";
 "max_filesize" = "Файлдың ең үлкен өлшемі — $1 МБ";
 
-"uploading_photos_from_computer" = "Компьютерден суреттерді жүктеу";
-"supported_formats" = "Қолдау көрсетілетін форматтар: JPG, PNG және GIF.";
-"max_load_photos" = "Бір уақытта 10 суретке дейін жүктеуге болады.";
+"uploading_photos_from_computer" = "Суреттерді компьютерден жүктеп салу";
+"supported_formats" = "Қолдау көрсетілетін пішімдер: JPG, PNG және GIF.";
+"max_load_photos" = "Бір уақытта 10 суретке дейін жүктеп салуға болады.";
 
 "tip" = "Кеңес";
 "tip_ctrl" = "Бірнеше суретті таңдау үшін Windows жүйесінде Ctrl, Mac OS жүйесінде CMD пернесін басып тұрып таңдаңыз.";
@@ -519,7 +519,7 @@
 "album_poster" = "Альбомның басты суреті";
 
 "select_photo" = "Сурет таңдау";
-"upload_new_photo" = "Жаңа сурет жүктеу";
+"upload_new_photo" = "Жаңа сурет жүктеп салу";
 
 "is_x_photos_zero" = "Барлығы нөл сурет.";
 "is_x_photos_one" = "Барлығы бір сурет.";
@@ -528,7 +528,7 @@
 "is_x_photos_other" = "Барлығы $1 сурет.";
 
 "all_photos" = "Барлық сурет";
-"error_uploading_photo" = "Суретті жүктеу сәтсіз аяқталды. Қате туралы хабарлама: ";
+"error_uploading_photo" = "Суретті жүктеп салу сәтсіз аяқталды. Қате туралы хабарлама: ";
 "too_many_photos" = "Суреттер тым көп.";
 
 "photo_x_from_y" = "$2 ішіндегі $1 сурет";
@@ -582,8 +582,8 @@
 "my_audios" = "Әндерім";
 "my_groups" = "Топтарым";
 "my_feed" = "Жаңалықтар";
-"my_feedback" = "Жауаптарым";
-"my_settings" = "Баптауларым";
+"my_feedback" = "Жауаптар";
+"my_settings" = "Баптау";
 "bookmarks" = "Бетбелгілер";
 "bookmarks_tab" = "Қойма";
 "bug_tracker" = "Баг ұстаушы";
@@ -614,7 +614,7 @@
 
 "main" = "Басты";
 "contacts" = "Байланыстарым";
-"avatar" = "Аватар";
+"avatar" = "Басты сурет";
 "privacy" = "Құпиялық";
 "interface" = "Интерфейс";
 "profile_picture" = "Парақша суреті";
@@ -650,7 +650,7 @@
 "privacy_setting_read_info" = "Парақшамдағы басты ақпарат кімге көрінеді";
 "privacy_setting_see_groups" = "Жазылған топтарым кімге көрінеді";
 "privacy_setting_see_photos" = "Суреттерім кімге көрінеді";
-"privacy_setting_see_videos" = "Бейнежазбаларым кімге көрінеді";
+"privacy_setting_see_videos" = "Бейнелерім кімге көрінеді";
 "privacy_setting_see_notes" = "Жолжазбаларым кімге көрінеді";
 "privacy_setting_see_friends" = "Достар тізімім кімге көрінеді";
 "privacy_setting_add_to_friends" = "Мені досқа кім қоса алады";
@@ -680,7 +680,7 @@
 "delete_your_page" = "парақшаңызды жоя аласыз";
 "delete_album" = "альбомды жоя аласыз";
 "ui_settings_interface" = "Интерфейс";
-"ui_settings_sidebar" = "Сол жақтағы меню";
+"ui_settings_sidebar" = "Сол жақ мәзір";
 "ui_settings_rating" = "Рейтинг";
 "ui_settings_rating_show" = "Көрсету";
 "ui_settings_rating_hide" = "Жасыру";
@@ -720,9 +720,9 @@
 "end_all_sessions_done" = "Барлық сеанстар, соның ішінде ұялы қосымшалар аяқталды";
 "backdrop_short" = "Артқы жағы";
 "backdrop" = "Парақшаның артқы жағы";
-"backdrop_desc" = "Парақша немесе топтық фон ретінде екі суретті орнатуға болады. Олар беттің сол және оң жақ шеттерінде көрсетіледі. Бұл мүмкіндіктің көмегімен парақшаңызға көбірек тұлға қосуға болады.";
-"backdrop_about_adding" = "Сіз тек бір суретті жүктей аласыз, бірақ дизайнға байланысты соңғы нәтиже жағымсыз көрінуі мүмкін. Сондай-ақ тек бір суретті өзгертуге болады: егер сізде екі сурет орнатылған болса және біреуін өзгерткіңіз келсе - тек біреуін жүктеп салыңыз, екіншісі жойылмайды. Екі суретті де жою үшін төмендегі түймені басыңыз, суреттерді жеке жою мүмкін емес.";
-"backdrop_warn" = "Суреттер жоғарыдағы орналасудағыдай реттеледі. Олардың биіктігі автоматты түрде ұлғайып, экран биіктігінің 100% алады, ортасында бұлыңғырлық болады. Негізгі OpenVK интерфейсінің фонын ауыстыру немесе дыбысты қосу мүмкін емес.";
+"backdrop_desc" = "Парақша немесе топтың артқы жағына екі сурет қоюға болады. Олар беттің сол және оң жақ шетінде көрсетіледі. Сөйтіп парақшаңызды дара ете аласыз.";
+"backdrop_about_adding" = "Бір суретті ғана орнатсаңыз да болады, бірақ сөйтсеңіз онша әдемі көрінбеуі мүмкін. Сонымен қатар екі суретті жеке-жеке алмастырсаңыз болады: егер сізде екі сурет орнатылған болып, біреуі ұнамай қалса, тек соны ғана алмастырыңыз — екінші сурет жойылмайды. Суреттің екеуін де жою үшін төмендегі түймені басыңыз. Бір суретті бөлек жоюға болмайды.";
+"backdrop_warn" = "Суреттер жоғары көрсетілгендей реттеледі. Олардың биіктігі автоматты түрде ұлғайып, экран биіктігінің 100%-ын алады, ортасында бұлыңғырлық болады. Бұл тек сіздің парақшаңызға әсер етеді; негізгі OpenVK интерфейсінің фонын өзгерту мүмкін емес.";
 "backdrop_save" = "Сурет(тер)ді сақтау";
 "backdrop_remove" = "Суреттерді жою";
 "backdrop_error_title" = "Суреттерді сақтау кезінде қателікке тап болдық";
@@ -843,9 +843,9 @@
 
 /* Videos */
 
-"videos" = "Бейнежазбалар";
-"video" = "Бейнежазба";
-"upload_video" = "Бейнежазба жүктеу";
+"videos" = "Бейнелер";
+"video" = "Бейне";
+"upload_video" = "Бейне жүктеп салу";
 "video_uploaded" = "Жүктелді";
 "video_updated" = "Жаңартылды";
 "video_link_to_yt" = "YT сілтеме";
@@ -853,19 +853,19 @@
 "info_description" = "Сипаттама";
 "info_uploaded_by" = "Жүктеген:";
 "info_upload_date" = "Жүктелген күні";
-"videos_zero" = "Бейнежазбалар жоқ";
-"videos_one" = "$1 бейнежазба";
-"videos_other" = "$1 бейнежазба";
+"videos_zero" = "Бейне жоқ";
+"videos_one" = "$1 бейне";
+"videos_other" = "$1 бейне";
 "view_video" = "Көру";
 "change_video" = "Бейнені өзгерту";
 "unknown_video" = "Бұл бейне OpenVK-ның осы нұсқасында жұмыс істемейді.";
 
 "selecting_video" = "Бейне таңдау";
-"upload_new_video" = "Жаңа бейнежазба жүктеу";
-"max_attached_videos" = "Максимум 10 бейнежазба";
+"upload_new_video" = "Жаңа бейне жүктеп салу";
+"max_attached_videos" = "Максимум 10 бейне";
 "max_attached_photos" = "Максимум 10 сурет";
 "max_attached_audios" = "Максимум 10 ән";
-"no_videos" = "Сізде бейнежазба жоқ.";
+"no_videos" = "Сізде бейне жоқ.";
 "no_videos_results" = "Нәтиже жоқ.";
 
 "video_file_upload" = "Файл жүктеп салу";
@@ -876,8 +876,8 @@
 "audios" = "Әндер";
 "audio" = "Ән";
 "playlist" = "Әнтізім";
-"upload_audio" = "Ән жүктеу";
-"upload_audio_to_group" = "Топқа ән жүктеу";
+"upload_audio" = "Ән жүктеп салу";
+"upload_audio_to_group" = "Топқа ән жүктеп салу";
 
 "performer" = "Орындаушы";
 "audio_name" = "Атауы";
@@ -1070,8 +1070,8 @@
 "points" = "Дауыс";
 "points_count" = "дауыс";
 "on_your_account" = "сіздің шотыңызда";
-"top_up_your_account" = "Балансты толтыру";
-"you_still_have_x_points" = "Сізде <b>$1</b> қолданылмаған дауыс.";
+"top_up_your_account" = "Теңгерімді толтыру";
+"you_still_have_x_points" = "Сізде <b>$1</b> дауыс қолданылмаған.";
 "vouchers" = "Ваучерлер";
 "have_voucher" = "Ваучер бар ма";
 "voucher_token" = "Ваучер коды";
@@ -1445,7 +1445,7 @@
 "not_a_photo" = "Жүктелген файл суретке ұқсамайды.";
 "file_too_big" = "Файл өлшемі тым үлкен.";
 "file_loaded_partially" = "Файл ішінара жүктелді.";
-"file_not_uploaded" = "Файлды жүктеу мүмкін болмады.";
+"file_not_uploaded" = "Файлды жүктеп салу мүмкін болмады.";
 "error_code" = "Қате коды: $1.";
 "ffmpeg_timeout" = "ffmpeg өңдеу уақыты шектен асты. Файлды қайта жүктеп көріңіз.";
 "ffmpeg_not_installed" = "Файлды өңдеу мүмкін емес. Серверде ffmpeg орнатылмаған сияқты.";
@@ -1465,7 +1465,7 @@
 "error_when_saving_gift" = "Сыйлықты сақтау қатесі";
 "error_when_saving_gift_bad_image" = "Сыйлықтың суреті дұрыс емес.";
 "error_when_saving_gift_no_image" = "Сыйлықтың суретін жүктеңіз.";
-"video_uploads_disabled" = "Бейне жүктеу жүйе әкімшісі тарапынан ажыратылған.";
+"video_uploads_disabled" = "Бейне жүктеп салу жүйе әкімшісі тарапынан сөндірілген.";
 
 "error_when_publishing_comment" = "Пікір жариялау қатесі";
 "error_when_publishing_comment_description" = "Сурет бүлінген, тым үлкен немесе оның өлшемдері үйлесімсіз.";
@@ -1885,7 +1885,7 @@
 "video_access_denied" = "Бейнені көруге рұқсат жоқ";
 "open_page_to_read_comms" = "Пікірлерді оқу үшін <a href=\"$1\">мына бетті</a> ашыңыз.";
 
-"no_video_error" = "Бейнежазба жоқ";
+"no_video_error" = "Бейне жоқ";
 "no_video_description" = "Файл таңдаңыз немесе сілтеме көрсетіңіз.";
 
 "error_video" = "Қате орын алды";
@@ -2015,7 +2015,7 @@
 "error_file_too_big" = "Файл тым үлкен.";
 "error_file_invalid_format" = "Файл пішіміне рұқсат етілмеген.";
 "error_file_adding_copied" = "Файлды қосу мүмкін болмады; ол бұрыннан қосылған.";
-"error_file_preview" = "Файлды жүктеу мүмкін болмады: суретте қателіктер бар.";
+"error_file_preview" = "Файлды жүктеп салу мүмкін болмады: суретте қателіктер бар.";
 
 "private_document" = "Жеке (сілтеме бойынша)";
 "public_document" = "Жалпыға ортақ";
@@ -2127,11 +2127,11 @@
 "tour_section_4_text_4" = "Егер уақыт үнемдегіңіз келсе, іздеу жолағы сайттың үстінде де қолжетімді";
 
 "tour_section_5_title_1" = "Бейнелерді жүктеп, достарыңызбен бөлісіңіз!";
-"tour_section_5_text_1" = "Сіз бейнежазба мен клиптерді шексіз жүктей аласыз";
+"tour_section_5_text_1" = "Сіз бейне мен клиптерді шексіз жүктей аласыз";
 "tour_section_5_text_2" = "Бейнелеріңізді кім көре алатынын құпиялық баптауларында реттей аласыз";
-"tour_section_5_bottom_text_1" = "Бейнені «Бейнелер» бөліміне өтпей-ақ, қабырғадағы жаңа жазбаға тіркей салып та жүктеуге болады:";
+"tour_section_5_bottom_text_1" = "Бейнені «Бейнелер» бөліміне өтпей-ақ, қабырғадағы жаңа жазбаға тіркеп те жүктеп салуға болады:";
 "tour_section_5_title_2" = "YouTube-тен бейне импорттау";
-"tour_section_5_text_3" = "Бейнені тікелей жүктеуден басқа, оны YouTube-тен кірістіре аласыз.";
+"tour_section_5_text_3" = "Бейнені тікелей жүктеп салғаннан басқа, оны YouTube-тен кірістіре аласыз.";
 
 "tour_section_6_title_1" = "Әндер тыңдаңыз";
 "tour_section_6_text_1" = "\"Әндерім\" бөлімінде ән тыңдай аласыз";
