--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -2227,6 +2227,10 @@
 
 "nospam_prevention" = "Данное действие затронет множество данных. Вы действительно хотите применить?";
 
+"report_force_exclude_author_from_global_feed" = "Исключить <b>автора контента</b> из глобальной ленты";
+"report_force_exclude_user_from_global_feed" = "Исключить <b>пользователя</b> из глобальной ленты";
+"report_force_exclude_group_from_global_feed" = "Исключить <b>сообщество</b> из глобальной ленты";
+
 /* RSS */
 
 "post_deact_in_general" = "Удаление страницы";
