--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1205,6 +1205,8 @@
 "app_err_ava_desc" = "Аватарка слишком большая или кривая: ошибка общего характера №$res.";
 "app_err_note" = "Не удалось прикрепить новостную заметку";
 "app_err_note_desc" = "Убедитесь, что ссылка правильная и заметка принадлежит Вам.";
+"app_delete_modal_desc" = "Вы уверены, что хотите удалить приложение? Это действие нельзя отменить.";
+"app_delete_succ" = "Приложение удалено";
 
 "learn_more" = "Подробнее";
 
