--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1461,6 +1461,8 @@
 "failed_to_change_topic" = "Failed to change topic";
 "no_title_specified" = "No title specified.";
 
+"restrict_topic" = "Only administrators can comment";
+
 /* Errors */
 
 "error_1" = "Incorrect query";
