--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1383,6 +1383,7 @@
 "failed_to_create_topic" = "Не удалось создать тему";
 "failed_to_change_topic" = "Не удалось изменить тему";
 "no_title_specified" = "Заголовок не указан.";
+"restrict_topic" = "Комментировать могут только администраторы";
 
 /* Errors */
 
