--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1134,6 +1134,7 @@
 "back_to_user" = "К странице $1";
 "back_to_my_page" = "К моей странице";
 "send_gift" = "Отправить подарок";
+"gift_back" = "Отправить подарок в ответ";
 "gift_select" = "Выбрать подарок";
 "collections" = "Коллекции";
 "confirm" = "Подтверждение";
