feat(gifts): redesign UI (#1454)
Список подарков пользователя:
<img width="809" height="970" alt="Список подарков пользователя"
src="https://github.com/user-attachments/assets/ffba4974-ce19-4681-885f-a50973544456"
/>

Общее меню подарков:
<img width="822" height="693" alt="Общее меню подарков"
src="https://github.com/user-attachments/assets/adb2767e-4d3d-4cbd-8435-c41524516aa1"
/>

Выбор подарка из коллекции:
<img width="807" height="485" alt="Выбор подарка из коллекции"
src="https://github.com/user-attachments/assets/b0ea7f5d-0337-44d5-98a1-d82d59c418c6"
/>

Количество использований подарка и стоимость платных подарков появляется
при ховере

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1177,6 +1177,7 @@
 
 /* Gifts */
 
+"my_gifts" = "My gifts";
 "gift" = "Gift";
 "gifts" = "Gifts";
 "gifts_zero" = "Zero gifts";
@@ -1187,7 +1188,10 @@
 "gifts_left_one" = "One gift left";
 "gifts_left_other" = "$1 gifts left";
 
+"back_to_user" = "To $1's page";
+"back_to_my_page" = "To my page";
 "send_gift" = "Send gift";
+"gift_back" = "Send gift in response";
 
 "gift_select" = "Select gift";
 "collections" = "Collections";
