--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -84,7 +84,7 @@
 "desc_none" = "описание отсутствует";
 "send" = "Отправить";
 "years_zero" = "0 лет";
-"years_one" = "1 год";
+"years_one" = "$1 год";
 "years_few" = "$1 года";
 "years_many" = "$1 лет";
 "years_other" = "$1 лет";
@@ -210,7 +210,7 @@
 "shown" = "Показано";
 "x_out_of" = "$1 из";
 "wall_zero" = "нет записей";
-"wall_one" = "единственная запись";
+"wall_one" = "$1 запись";
 "wall_few" = "$1 записи";
 "wall_many" = "$1 записей";
 "wall_other" = "$1 записей";
