--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -38,6 +38,9 @@
 "email_error" = "Непредвиденная ошибка при отправке письма.";
 "email_rate_limit_error" = "Нельзя делать это так часто, извините.";
 "email_verify_success" = "Ваш Email был подтверждён. Приятного времяпрепровождения!";
+"email_not_in_whitelist" = "Извините, но в данный момент регистрация с вашим поставщиком электронной почты запрещена.";
+"email_whitelist_desc" = "Разрешённые поставщики электронной почты: $1";
+
 "registration_disabled_info" = "Регистрация отключена системным администратором. При возможности попросите приглашение у вашего знакомого, если он зарегистрирован на этом сайте.";
 "registration_closed" = "Регистрация закрыта.";
 "invites_you_to" = "<strong>$1</strong> приглашает вас в $2";
