--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -38,6 +38,8 @@
 "email_sent" = "Лист успішно надісланий.";
 "email_sent_desc" = "Якщо Ваша електронна пошта існує, Ви отримаєте лист.";
 "email_error" = "Непередбачена помилка під час надсилання листа.";
+"email_not_in_whitelist" = "Вибачте, але зараз реєстрація з вашим постачальником електронної пошти заборонена.";
+"email_whitelist_desc" = "Дозволені постачальники електронної пошти: $1";
 "password_reset_rate_limit_error" = "Не можна робити цю дію так часто, вибачте.";
 "email_verify_success" = "Ваш e-mail був підтверджений. Приємного проведення часу!";
 "registration_disabled_info" = "Реєстрація вимкнена системним адміністратором. За можливості попросіть запрошення у Вашого знайомого, якщо він зареєстрований на цьому сайті.";
