do the same for faves_one

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -2418,7 +2418,7 @@
 "faves_comments_empty_tip" = "Здесь будут отображаться понравившиеся Вам комментарии.";
 "faves_photos_empty_tip" = "Здесь будут отображаться понравившиеся Вам фотографии.";
 "faves_videos_empty_tip" = "Здесь будут отображаться понравившиеся Вам видео.";
-"faves_zero" = "Ни одной закладки"; /* на украинском можно как ни одной вподобайки */
+"faves_zero" = "Ни одной закладки";
 "faves_one" = "Одна закладка";
 "faves_few" = "$1 закладки";
 "faves_many" = "$1 закладок";
