fix(l10n): fix pluralization for audio count and faves in Russian locale (#1499)
Из-за того, что некоторые комментарии располагались после строк,
следующая строка в локализации не определялась и таким образом
получались приколы по типу "2 аудиозаписей", "1 закладок"

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -891,7 +891,7 @@
 "audio_embed_processing_bait" = "Всё равно хочу воспроизвести";
 
 "audios_count_zero" = "Нет аудиозаписей";
-"audios_count_one" = "Одна аудиозапись"; /* сингл */
+"audios_count_one" = "Одна аудиозапись";
 "audios_count_few" = "$1 аудиозаписи";
 "audios_count_many" = "$1 аудиозаписей";
 "audios_count_other" = "$1 аудиозаписей";
@@ -2421,7 +2421,7 @@
 "faves_comments_empty_tip" = "Здесь будут отображаться понравившиеся Вам комментарии.";
 "faves_photos_empty_tip" = "Здесь будут отображаться понравившиеся Вам фотографии.";
 "faves_videos_empty_tip" = "Здесь будут отображаться понравившиеся Вам видео.";
-"faves_zero" = "Ни одной закладки"; /* на украинском можно как ни одной вподобайки */
+"faves_zero" = "Ни одной закладки";
 "faves_one" = "Одна закладка";
 "faves_few" = "$1 закладки";
 "faves_many" = "$1 закладок";
